# actions

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: learn-github-actions.yml  python-app.yml
examples/: __init__.py  arithmetic.py
tests/: __init__.py  test_functions.py
