[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["evan <evan@pop-os.localdomain>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
