[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["evan <evan@pop-os.localdomain>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-clarity = "^1.0.1"
pytest-emoji = "^0.2.0"

[tool.pytest.ini_options]
addopts = "-rssxX -l --tb=short --strict --emoji -vvv -p no:warnings"
xfail_strict = "True"
markers = [
  "smoke",
  "fire",
  "verify"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
